// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayBuilderPage should render should show register modal when user is not logged in 1`] = `
<DocumentFragment>
  <div
    class="wpbb-reset tw-uppercase tw-bg-no-repeat tw-bg-top tw-bg-cover  tw-dark"
    style="background-image: url(undefined);"
  >
    <div
      class="tw-flex tw-flex-col tw-items-center tw-max-w-screen-lg tw-m-auto tw-pb-80"
    >
      <div
        class="tw-h-[140px] tw-flex tw-flex-col tw-justify-center tw-items-center"
      >
        <div
          class="tw-flex tw-items-center tw-justify-center tw-font-600 tw-gap-14"
        >
          <span
            class="tw-text-dd-blue dark:tw-text-white"
          >
            Theme
          </span>
          <button
            class="tw-flex tw-items-center tw-justify-end dark:tw-justify-start tw-w-[71px] tw-h-30 tw-px-2 tw-rounded-16 dark:tw-border-2 tw-border-solid tw-border-white tw-cursor-pointer tw-bg-dd-blue dark:tw-bg-none"
          >
            <div
              class="tw-w-[47px] tw-h-[22px] tw-rounded-16 tw-bg-white tw-text-10 tw-flex tw-items-center tw-justify-center"
            >
              <span
                class="tw-text-dd-blue tw-font-600 tw-text-sans tw-uppercase"
              >
                dark
              </span>
            </div>
          </button>
        </div>
      </div>
      <div
        class="tw-flex tw-flex-col tw-dark wpbb-default-bracket tw-relative"
      >
        <div
          class="tw-flex tw-flex-col tw-justify-end"
          style="margin-bottom: 95px; min-height: 0;"
        >
          <div
            class="tw-flex tw-flex-col tw-items-center"
            style="gap: 24px;"
          >
            <div
              class="wpbb-team-3-0-winner tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[297px] tw-h-[52px] tw-text-white tw-font-700 tw-bg-transparent tw-border-solid tw-border-white/50"
              style="border-width: 2px;"
            />
          </div>
        </div>
        <div
          class="tw-flex tw-flex-col tw-justify-center tw-h-100"
        >
          <div
            class="tw-flex tw-justify-between"
            style="width: 985px;"
          >
            <div
              class="tw-flex tw-flex-col tw-justify-center tw-gap-[80px]"
            >
              <div
                class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
              >
                <div
                  class="wpbb-team-0-0-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
                <div
                  class="wpbb-team-0-0-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
              </div>
              <div
                class="tw-h-[76px] tw-w-[115px]"
              />
              <div
                class="tw-h-[76px] tw-w-[115px]"
              />
              <div
                class="tw-h-[76px] tw-w-[115px]"
              />
            </div>
            <div
              class="tw-flex tw-flex-col tw-justify-center tw-gap-[236px]"
            >
              <div
                class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
              >
                <div
                  class="wpbb-team-1-0-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
                <div
                  class="wpbb-team-1-0-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
              </div>
              <div
                class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
              >
                <div
                  class="wpbb-team-1-1-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
                <div
                  class="wpbb-team-1-1-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
              </div>
            </div>
            <div
              class="tw-flex tw-flex-col tw-justify-center tw-gap-[548px]"
            >
              <div
                class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
              >
                <div
                  class="wpbb-team-2-0-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
                <div
                  class="wpbb-team-2-0-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
              </div>
            </div>
            <div
              class="tw-flex tw-flex-col tw-justify-center tw-gap-[1172px]"
            >
              <div
                class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[-48px]"
              >
                <div
                  class="wpbb-team-3-0-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
                <div
                  class="wpbb-team-3-0-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
              </div>
            </div>
            <div
              class="tw-flex tw-flex-col tw-justify-center tw-gap-[548px]"
            >
              <div
                class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
              >
                <div
                  class="wpbb-team-2-1-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
                <div
                  class="wpbb-team-2-1-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
              </div>
            </div>
            <div
              class="tw-flex tw-flex-col tw-justify-center tw-gap-[236px]"
            >
              <div
                class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
              >
                <div
                  class="wpbb-team-1-2-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
                <div
                  class="wpbb-team-1-2-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
              </div>
              <div
                class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
              >
                <div
                  class="wpbb-team-1-3-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
                <div
                  class="wpbb-team-1-3-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
              </div>
            </div>
            <div
              class="tw-flex tw-flex-col tw-justify-center tw-gap-[80px]"
            >
              <div
                class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
              >
                <div
                  class="wpbb-team-0-4-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
                <div
                  class="wpbb-team-0-4-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
              </div>
              <div
                class="tw-h-[76px] tw-w-[115px]"
              />
              <div
                class="tw-h-[76px] tw-w-[115px]"
              />
              <div
                class="tw-h-[76px] tw-w-[115px]"
              />
            </div>
          </div>
        </div>
        <div
          style="margin-top: 20px; min-height: 200px;"
        >
          <div
            class="tw-flex tw-flex-col tw-gap-20 tw-justify-between tw-items-center tw-font-700 tw-whitespace-nowrap "
          >
            <span
              class="tw-text-36 tw-text-dd-blue dark:tw-text-white"
            >
              Who You Got?
            </span>
            <svg
              class="tw-w-[124px] tw-text-black/25 dark:tw-text-white"
            />
          </div>
        </div>
        <div
          class="tw-absolute"
        >
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
        </div>
        <div
          class="tw-absolute"
        >
          <div />
          <div />
        </div>
      </div>
      <div
        class="tw-px-24 tw-mt-60 tw-flex tw-gap-15 tw-flex-col tw-items-stretch tw-self-stretch"
      >
        <div
          class="tw-flex tw-self-stretch tw-flex-col tw-items-stretch"
        >
          <button
            class="tw-flex tw-flex-row tw-items-center tw-justify-center tw-font-sans tw-uppercase tw-whitespace-nowrap tw-cursor-pointer disabled:tw-cursor-default tw-leading-none tw-border-none tw-py-15 tw-rounded-8 tw-font-700 tw-text-16 sm:tw-text-24 tw-gap-15 sm:tw-gap-20 tw-bg-green tw-text-dd-blue disabled:!tw-bg-transparent disabled:tw-border disabled:tw-border-solid disabled:tw-border-black/20 disabled:tw-text-black/20 dark:tw-bg-green/15 dark:tw-text-white dark:tw-border dark:tw-border-solid dark:tw-border-green dark:disabled:tw-text-white/20 dark:disabled:tw-border-white/20"
            disabled=""
          >
            <svg
              class="tw-h-16 sm:tw-h-24"
            />
            <span>
              Add to Apparel
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayBuilderPage should render submit picks button when user is logged in 1`] = `
<DocumentFragment>
  <div
    class="wpbb-reset tw-uppercase tw-bg-no-repeat tw-bg-top tw-bg-cover  tw-dark"
    style="background-image: url(undefined);"
  >
    <div
      class="tw-flex tw-flex-col tw-items-center tw-max-w-screen-lg tw-m-auto tw-pb-80"
    >
      <div
        class="tw-h-[140px] tw-flex tw-flex-col tw-justify-center tw-items-center"
      >
        <div
          class="tw-flex tw-items-center tw-justify-center tw-font-600 tw-gap-14"
        >
          <span
            class="tw-text-dd-blue dark:tw-text-white"
          >
            Theme
          </span>
          <button
            class="tw-flex tw-items-center tw-justify-end dark:tw-justify-start tw-w-[71px] tw-h-30 tw-px-2 tw-rounded-16 dark:tw-border-2 tw-border-solid tw-border-white tw-cursor-pointer tw-bg-dd-blue dark:tw-bg-none"
          >
            <div
              class="tw-w-[47px] tw-h-[22px] tw-rounded-16 tw-bg-white tw-text-10 tw-flex tw-items-center tw-justify-center"
            >
              <span
                class="tw-text-dd-blue tw-font-600 tw-text-sans tw-uppercase"
              >
                dark
              </span>
            </div>
          </button>
        </div>
      </div>
      <div
        class="tw-flex tw-flex-col tw-dark wpbb-default-bracket tw-relative"
      >
        <div
          class="tw-flex tw-flex-col tw-justify-end"
          style="margin-bottom: 95px; min-height: 0;"
        >
          <div
            class="tw-flex tw-flex-col tw-items-center"
            style="gap: 24px;"
          >
            <div
              class="wpbb-team-3-0-winner tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[297px] tw-h-[52px] tw-text-white tw-font-700 tw-bg-transparent tw-border-solid tw-border-white/50"
              style="border-width: 2px;"
            />
          </div>
        </div>
        <div
          class="tw-flex tw-flex-col tw-justify-center tw-h-100"
        >
          <div
            class="tw-flex tw-justify-between"
            style="width: 985px;"
          >
            <div
              class="tw-flex tw-flex-col tw-justify-center tw-gap-[80px]"
            >
              <div
                class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
              >
                <div
                  class="wpbb-team-0-0-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
                <div
                  class="wpbb-team-0-0-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
              </div>
              <div
                class="tw-h-[76px] tw-w-[115px]"
              />
              <div
                class="tw-h-[76px] tw-w-[115px]"
              />
              <div
                class="tw-h-[76px] tw-w-[115px]"
              />
            </div>
            <div
              class="tw-flex tw-flex-col tw-justify-center tw-gap-[236px]"
            >
              <div
                class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
              >
                <div
                  class="wpbb-team-1-0-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
                <div
                  class="wpbb-team-1-0-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
              </div>
              <div
                class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
              >
                <div
                  class="wpbb-team-1-1-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
                <div
                  class="wpbb-team-1-1-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
              </div>
            </div>
            <div
              class="tw-flex tw-flex-col tw-justify-center tw-gap-[548px]"
            >
              <div
                class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
              >
                <div
                  class="wpbb-team-2-0-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
                <div
                  class="wpbb-team-2-0-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
              </div>
            </div>
            <div
              class="tw-flex tw-flex-col tw-justify-center tw-gap-[1172px]"
            >
              <div
                class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[-48px]"
              >
                <div
                  class="wpbb-team-3-0-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
                <div
                  class="wpbb-team-3-0-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
              </div>
            </div>
            <div
              class="tw-flex tw-flex-col tw-justify-center tw-gap-[548px]"
            >
              <div
                class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
              >
                <div
                  class="wpbb-team-2-1-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
                <div
                  class="wpbb-team-2-1-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
              </div>
            </div>
            <div
              class="tw-flex tw-flex-col tw-justify-center tw-gap-[236px]"
            >
              <div
                class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
              >
                <div
                  class="wpbb-team-1-2-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
                <div
                  class="wpbb-team-1-2-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
              </div>
              <div
                class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
              >
                <div
                  class="wpbb-team-1-3-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
                <div
                  class="wpbb-team-1-3-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
              </div>
            </div>
            <div
              class="tw-flex tw-flex-col tw-justify-center tw-gap-[80px]"
            >
              <div
                class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
              >
                <div
                  class="wpbb-team-0-4-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
                <div
                  class="wpbb-team-0-4-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                  style="border-width: 2px;"
                />
              </div>
              <div
                class="tw-h-[76px] tw-w-[115px]"
              />
              <div
                class="tw-h-[76px] tw-w-[115px]"
              />
              <div
                class="tw-h-[76px] tw-w-[115px]"
              />
            </div>
          </div>
        </div>
        <div
          style="margin-top: 20px; min-height: 200px;"
        >
          <div
            class="tw-flex tw-flex-col tw-gap-20 tw-justify-between tw-items-center tw-font-700 tw-whitespace-nowrap "
          >
            <span
              class="tw-text-36 tw-text-dd-blue dark:tw-text-white"
            >
              Who You Got?
            </span>
            <svg
              class="tw-w-[124px] tw-text-black/25 dark:tw-text-white"
            />
          </div>
        </div>
        <div
          class="tw-absolute"
        >
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
          <div
            class="mock-react-lineto"
          />
        </div>
        <div
          class="tw-absolute"
        >
          <div />
          <div />
        </div>
      </div>
      <div
        class="tw-px-24 tw-mt-60 tw-flex tw-gap-15 tw-flex-col tw-items-stretch tw-self-stretch"
      >
        <div
          class="tw-flex tw-self-stretch tw-flex-col tw-items-stretch"
        >
          <button
            class="tw-flex tw-flex-row tw-items-center tw-justify-center tw-font-sans tw-uppercase tw-whitespace-nowrap tw-cursor-pointer disabled:tw-cursor-default tw-leading-none tw-border-none tw-py-15 tw-rounded-8 tw-font-700 tw-text-16 sm:tw-text-24 tw-gap-15 sm:tw-gap-20 tw-bg-green tw-text-dd-blue disabled:!tw-bg-transparent disabled:tw-border disabled:tw-border-solid disabled:tw-border-black/20 disabled:tw-text-black/20 dark:tw-bg-green/15 dark:tw-text-white dark:tw-border dark:tw-border-solid dark:tw-border-green dark:disabled:tw-text-white/20 dark:disabled:tw-border-white/20"
            disabled=""
          >
            <svg
              class="tw-h-16 sm:tw-h-24"
            />
            <span>
              Add to Apparel
            </span>
          </button>
        </div>
        <button
          class="tw-flex tw-flex-row tw-items-center tw-justify-center tw-font-sans tw-uppercase tw-whitespace-nowrap tw-cursor-pointer disabled:tw-cursor-default tw-leading-none tw-border-none tw-py-15 tw-rounded-8 tw-font-700 tw-text-16 sm:tw-text-24 tw-gap-15 sm:tw-gap-20 tw-bg-blue tw-text-white disabled:!tw-bg-transparent disabled:tw-border disabled:tw-border-solid disabled:tw-border-black/20 disabled:tw-text-black/20 dark:tw-bg-blue/15 dark:tw-text-white dark:tw-border dark:tw-border-solid dark:tw-border-blue dark:disabled:tw-text-white/20 dark:disabled:tw-border-white/20"
          disabled=""
        >
          <svg
            class="tw-h-16 sm:tw-h-24"
          />
          <span>
            Submit Picks
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
